# gopher-mcp

./: .clang-format  .gitignore  AUTH_LIBRARY_CPP11.md  AUTH_LIBRARY_STANDALONE.md  AUTH_TESTS_STANDALONE_RESULTS.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMAKE_SYMBOL_EXPORT_FIX.md  CMakeLists.txt  FIX_HANGING_TESTS.md  LICENSE  MCP_STATUS.md  Makefile  README.md  STANDALONE_AUTH_LIBRARY_SUMMARY.md  VERIFY_AUTH.md  VERSIONING.md  build-verify-local.sh  build.sh  build_auth_tests_minimal.sh  build_standalone_auth_tests.sh  check-docker.sh  debug_backtrace.sh  debug_client.sh  debug_commands.txt  debug_crash.sh  debug_server.sh  dump-version.sh  health_response.txt  lldb_continue.txt  lldb_debug.txt  run_gdb.sh  run_lldb.sh  run_tests_with_standalone_auth.sh  test_advanced_echo.sh  test_auth_minimal.sh  test_auth_only.c  test_basic_echo.sh  test_crash.sh  test_debug.cc  (+32 more)
docker/windows-x64/: CMakeLists-real.txt  CMakeLists-windows.txt  CMakeLists.txt  README.md  mcp_auth_stub.cc  mcp_auth_windows.cc  run_test.bat  simple-test.js  verify_auth.c  windows_compat.cc
examples/mcp/: CMakeLists.txt  README.md  mcp_config_example_server.cc  mcp_example_client.cc  mcp_example_server.cc  mcp_example_server_enhanced.cc  mcp_https_example.cc  mcp_server_with_http_routing.cc
examples/stdio_echo/: CMakeLists.txt  mcp_application_base.h  stdio_echo_client_advanced.cc  stdio_echo_client_basic.cc  stdio_echo_server_advanced.cc  stdio_echo_server_basic.cc
examples/tcp_echo/: CMakeLists.txt  tcp_echo_client_basic.cc  tcp_echo_client_network.cc  tcp_echo_server_basic.cc  tcp_echo_server_network.cc
src/auth/: CMakeLists.txt  CMakeLists_cpp11.txt  README.md  auth_c_api.cc  cpp11_compat.h  gopher-mcp-auth-config.cmake.in  http_client.cc  jwks_client.cc  mcp_auth_crypto_optimized.cc  mcp_auth_implementation.cc  mcp_auth_network_optimized.cc  verify_auth.cc
src/c_api/: CMakeLists.txt  filter_chain_stubs.cc  handle_manager.h  json_value_converter.cc  json_value_converter.h  mcp_c_api_builders.cc  mcp_c_api_client.cc  mcp_c_api_connection.cc  mcp_c_api_core.cc  mcp_c_api_json.cc  mcp_c_api_server.cc  mcp_c_api_utils.cc  mcp_c_auth_api.cc  mcp_c_auth_api_network_optimized.cc  mcp_c_collections_impl.cc  mcp_c_filter_api.cc  mcp_c_filter_callbacks.cc  mcp_c_filter_chain.cc  mcp_c_filter_events.cc  mcp_c_logging_api.cc  mcp_c_memory_impl.cc  mcp_c_metrics_callbacks.cc  mcp_c_types_impl.cc  mcp_ffi_core.cc  mcp_filter_api.cc  mcp_filter_buffer.cc  mcp_filter_chain.cc  mcp_guard_transaction_impl.cc  mcp_logging_api.cc  mcp_raii.cc  mcp_raii_production.cc  mcp_types_improved.cc  unified_filter_chain.cc  unified_filter_chain.h
src/logging/: CMakeLists.txt  log_formatter.cc  log_sink.cc  logger.cc  logger_registry.cc
tests/: CMakeLists.txt  test_application_base_refactored.cc  test_buffer.cc  test_buffer.cpp  test_builders.cc  test_builders_extensive.cc  test_c_api_types.cc  test_compat.cc  test_compat.cpp  test_connection_pool_callbacks.cc  test_connection_utility.cc  test_event_loop.cc  test_event_loop.cpp  test_filter_api.cc  test_json.cc  test_json.cpp  test_json_serialization.cpp  test_listener_filter_chain.cc  test_listener_filter_chain.cc.bak  test_mcp_connection_manager.cc  test_mcp_serialization.cc  test_mcp_serialization_extensive.cc  test_mcp_type_helpers.cc  test_mcp_type_helpers.cpp  test_mcp_types.cc  test_mcp_types.cpp  test_mcp_types_extended.cpp  test_optional.cpp  test_optional_advanced.cc  test_optional_advanced.cpp  test_optional_extensive.cpp  test_short_json_api.cc  test_stdio_echo_client.cc  test_stdio_echo_client_advanced.cc  test_stdio_echo_client_basic.cc  test_stdio_echo_server.cc  test_stdio_echo_server_advanced.cc  test_stdio_echo_server_basic.cc  test_stdio_pipe_bridge.cc  test_tcp_echo_client_basic.cc  (+13 more)
tests/auth/: CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_standalone.txt  benchmark_crypto_optimization.cc  benchmark_jwt_validation.cc  benchmark_network_optimization.cc  run_complete_integration.sh  run_keycloak_tests.sh  run_mcp_inspector_tests.sh  test_auth_types.cc  test_complete_integration.cc  test_http_client.cc  test_jwks_client.cc  test_keycloak_integration.cc  test_mcp_inspector_flow.cc  test_memory_cache.cc  test_token_exchange.cc  test_token_exchange_integration.cc
tests/c_api/: test_async_filter_queue.cc  test_c_api_basic.cc  test_c_api_builders.cc  test_c_api_json.cc  test_c_api_json_simple.cc  test_c_api_memory.cc  test_c_api_protocol_types.cc  test_c_api_type_helpers.cc  test_c_api_types.cc  test_c_api_types_simple.cc  test_c_collections_impl.cc  test_c_memory_impl.cc  test_c_types_impl.cc  test_chain_from_json.cc  test_ffi_improvements.cc  test_filter_api.cc  test_filter_only_api.cc  test_filter_only_api_minimal.cc  test_filter_only_api_simple.cc  test_filter_registration_simple.cc  test_handle_manager.cc  test_json_api_unified.cc  test_json_chain_creation.cc  test_json_chain_creation_simple.cc  test_mcp_c_filter_api.cc  test_mcp_c_filter_chain.cc  test_mcp_c_filter_chain_exception_safety.cc  test_mcp_c_filter_chain_threading.cc  test_mcp_c_filter_events.cc  test_mcp_c_logging_api.cc  test_mcp_c_logging_api_minimal.cc  test_mcp_c_raii.cc  test_mcp_filter_api.cc  test_mcp_filter_buffer.cc  test_mcp_filter_chain.cc  test_mcp_logging_api.cc  test_mcp_raii.cc  test_mcp_raii_production.cc  test_mcp_raii_simple.cc  test_unified_chain_handles.cc
tests/client/: test_client_connection_check_threading.cc  test_client_disconnect_fixes.cc  test_client_idle_timeout.cc  test_client_reconnection_and_logging.cc  test_connection_promise_fix.cc  test_mcp_client_memory.cc  test_mcp_client_notifications.cc  test_mcp_client_threading.cc  test_mcp_initialize_request.cc  test_streamable_http_transport.cc
tests/config/: test_config_merge.cc  test_file_config_source.cc  test_file_config_source_enhanced.cc  test_file_source_interface.cc  test_file_source_yaml_env_includes.cc  test_filesystem_utils.h  test_json_helpers.h  test_listener_config.cc  test_merge_and_validate.cc  test_merge_semantics.cc  test_parse_error.cc  test_predicates.cc  test_search_precedence.cc  (+4 more)
(+1163 files in other folders)
